Rat-Grammer/ratParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/wanadoo/programming/c#/Rat/Rat-Grammer/Antlr/rat.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ratParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		IF=1, ELSE=2, WHERE=3, IN=4, IS=5, MUT=6, FN=7, PARALLEL=8, ARROW=9, ANY=10, 
		OPTIONAL=11, NIL=12, LET=13, LETG=14, TYPEKW=15, EXT=16, ENDEXT=17, AND=18, 
		ANDEQUALS=19, OR=20, NOT=21, OREQUALS=22, TRUE=23, FALSE=24, TWODOTS=25, 
		COLON=26, SEMICOLON=27, EXPRSEPARATOR=28, ID=29, RANGE=30, COMMA=31, XOREQUALS=32, 
		XOR=33, ADDEQUALS=34, PLUSPLUS=35, ADD=36, MINUSEQUALS=37, MINUS=38, PRODUCTEQUALS=39, 
		PRODUCT=40, DIVIDEEQUALS=41, DIVIDE=42, EQUALS=43, SET=44, LPARENTHESIS=45, 
		RPARENTHESIS=46, LBRACE=47, RBRACE=48, MEMDERCALLOPERATOR=49, NUMBER=50, 
		NULLCHAR=51, CHAR1=52, CHAR2=53, CHAR3=54, CHAR4=55, CHAR5=56, CHAR6=57, 
		CHAR7=58, CHAR8=59, CHAR9=60, CHAR10=61, CHAR11=62, CHAR12=63, CHAR13=64, 
		CHAR14=65, CHAR15=66, CHAR16=67, CHAR17=68, CHAR18=69, CHAR19=70, CHAR20=71, 
		CHAR21=72, CHAR22=73, CHAR23=74, CHAR24=75, CHAR25=76, CHAR26=77, CHAR27=78, 
		CHAR28=79, CHAR29=80, CHAR30=81, CHAR31=82, ESCAPEDQUOTE=83, ESCAPEDDOUBLEQUOTE=84, 
		QUOTE=85, DOUBLEQUOTE=86, STRING=87, QUOTEDSTRING=88, DOUBLEQUOTEDSTRING=89, 
		WHITESPACE=90, LINEFEED=91;
	public const int
		RULE_code = 0, RULE_extdef = 1, RULE_ifblock = 2, RULE_typedef = 3, RULE_funcdef = 4, 
		RULE_expressions = 5, RULE_expression = 6, RULE_leftUnaryOperator = 7, 
		RULE_rightUnaryOperator = 8, RULE_zeroLevelOperator = 9, RULE_firstLevelOperator = 10, 
		RULE_secondLevelOperator = 11, RULE_thirdLevelOperator = 12, RULE_forthLevelOpeator = 13, 
		RULE_term = 14, RULE_functype = 15, RULE_funcarg = 16, RULE_tupledef = 17, 
		RULE_type = 18, RULE_tupletype = 19, RULE_arg = 20;
	public static readonly string[] ruleNames = {
		"code", "extdef", "ifblock", "typedef", "funcdef", "expressions", "expression", 
		"leftUnaryOperator", "rightUnaryOperator", "zeroLevelOperator", "firstLevelOperator", 
		"secondLevelOperator", "thirdLevelOperator", "forthLevelOpeator", "term", 
		"functype", "funcarg", "tupledef", "type", "tupletype", "arg"
	};

	private static readonly string[] _LiteralNames = {
		null, "'if'", "'else'", "'where'", "'in'", "'is'", "'mut'", "'fn'", "'parallel'", 
		"'=>'", "'Any'", "'Optional'", "'Nil'", "'let'", "'LET'", "'type'", "'ext'", 
		"'endext'", "'and'", "'&='", "'or'", "'not'", "'|='", "'true'", "'false'", 
		"'..'", "':'", "';'", null, null, null, "','", "'^='", null, "'+='", "'++'", 
		"'+'", "'-='", "'-'", "'*='", "'*'", "'/='", "'/'", "'=='", "'='", "'('", 
		"')'", "'{'", "'}'", "'::'", null, "'\\0'", "'\\1'", "'\\2'", "'\\3'", 
		"'\\4'", "'\\5'", "'\\6'", "'\\7'", "'\\8'", "'\\9'", "'\\10'", "'\\11'", 
		"'\\12'", "'\\13'", "'\\14'", "'\\15'", "'\\16'", "'\\17'", "'\\18'", 
		"'\\19'", "'\\20'", "'\\21'", "'\\22'", "'\\23'", "'\\24'", "'\\25'", 
		"'\\26'", "'\\27'", "'\\28'", "'\\29'", "'\\30'", "'\\31'", "'\\''", "'\\\"'", 
		"'''", "'\"'", null, null, null, "' '", "'\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "IF", "ELSE", "WHERE", "IN", "IS", "MUT", "FN", "PARALLEL", "ARROW", 
		"ANY", "OPTIONAL", "NIL", "LET", "LETG", "TYPEKW", "EXT", "ENDEXT", "AND", 
		"ANDEQUALS", "OR", "NOT", "OREQUALS", "TRUE", "FALSE", "TWODOTS", "COLON", 
		"SEMICOLON", "EXPRSEPARATOR", "ID", "RANGE", "COMMA", "XOREQUALS", "XOR", 
		"ADDEQUALS", "PLUSPLUS", "ADD", "MINUSEQUALS", "MINUS", "PRODUCTEQUALS", 
		"PRODUCT", "DIVIDEEQUALS", "DIVIDE", "EQUALS", "SET", "LPARENTHESIS", 
		"RPARENTHESIS", "LBRACE", "RBRACE", "MEMDERCALLOPERATOR", "NUMBER", "NULLCHAR", 
		"CHAR1", "CHAR2", "CHAR3", "CHAR4", "CHAR5", "CHAR6", "CHAR7", "CHAR8", 
		"CHAR9", "CHAR10", "CHAR11", "CHAR12", "CHAR13", "CHAR14", "CHAR15", "CHAR16", 
		"CHAR17", "CHAR18", "CHAR19", "CHAR20", "CHAR21", "CHAR22", "CHAR23", 
		"CHAR24", "CHAR25", "CHAR26", "CHAR27", "CHAR28", "CHAR29", "CHAR30", 
		"CHAR31", "ESCAPEDQUOTE", "ESCAPEDDOUBLEQUOTE", "QUOTE", "DOUBLEQUOTE", 
		"STRING", "QUOTEDSTRING", "DOUBLEQUOTEDSTRING", "WHITESPACE", "LINEFEED"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "rat.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ratParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ratParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ratParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CodeContext : ParserRuleContext {
		public FuncdefContext[] funcdef() {
			return GetRuleContexts<FuncdefContext>();
		}
		public FuncdefContext funcdef(int i) {
			return GetRuleContext<FuncdefContext>(i);
		}
		public TypedefContext[] typedef() {
			return GetRuleContexts<TypedefContext>();
		}
		public TypedefContext typedef(int i) {
			return GetRuleContext<TypedefContext>(i);
		}
		public ExtdefContext[] extdef() {
			return GetRuleContexts<ExtdefContext>();
		}
		public ExtdefContext extdef(int i) {
			return GetRuleContext<ExtdefContext>(i);
		}
		public ExpressionsContext[] expressions() {
			return GetRuleContexts<ExpressionsContext>();
		}
		public ExpressionsContext expressions(int i) {
			return GetRuleContext<ExpressionsContext>(i);
		}
		public IfblockContext[] ifblock() {
			return GetRuleContexts<IfblockContext>();
		}
		public IfblockContext ifblock(int i) {
			return GetRuleContext<IfblockContext>(i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << LET) | (1L << LETG) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << MINUS) | (1L << LPARENTHESIS) | (1L << NUMBER))) != 0) || _la==STRING) {
				{
				State = 47;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 42; funcdef();
					}
					break;
				case 2:
					{
					State = 43; typedef();
					}
					break;
				case 3:
					{
					State = 44; extdef();
					}
					break;
				case 4:
					{
					State = 45; expressions();
					}
					break;
				case 5:
					{
					State = 46; ifblock();
					}
					break;
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtdefContext : ParserRuleContext {
		public ITerminalNode LET() { return GetToken(ratParser.LET, 0); }
		public ITerminalNode EXT() { return GetToken(ratParser.EXT, 0); }
		public ITerminalNode ID() { return GetToken(ratParser.ID, 0); }
		public ITerminalNode LBRACE() { return GetToken(ratParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(ratParser.RBRACE, 0); }
		public FuncdefContext[] funcdef() {
			return GetRuleContexts<FuncdefContext>();
		}
		public FuncdefContext funcdef(int i) {
			return GetRuleContext<FuncdefContext>(i);
		}
		public ExtdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterExtdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitExtdef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExtdefContext extdef() {
		ExtdefContext _localctx = new ExtdefContext(Context, State);
		EnterRule(_localctx, 2, RULE_extdef);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(LET);
			State = 53; Match(EXT);
			State = 54; Match(ID);
			State = 55; Match(LBRACE);
			State = 59;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 56; funcdef();
					}
					} 
				}
				State = 61;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 62; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfblockContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(ratParser.IF, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] ARROW() { return GetTokens(ratParser.ARROW); }
		public ITerminalNode ARROW(int i) {
			return GetToken(ratParser.ARROW, i);
		}
		public ITerminalNode[] LBRACE() { return GetTokens(ratParser.LBRACE); }
		public ITerminalNode LBRACE(int i) {
			return GetToken(ratParser.LBRACE, i);
		}
		public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public ITerminalNode[] RBRACE() { return GetTokens(ratParser.RBRACE); }
		public ITerminalNode RBRACE(int i) {
			return GetToken(ratParser.RBRACE, i);
		}
		public ITerminalNode ELSE() { return GetToken(ratParser.ELSE, 0); }
		public IfblockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifblock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterIfblock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitIfblock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfblock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfblockContext ifblock() {
		IfblockContext _localctx = new IfblockContext(Context, State);
		EnterRule(_localctx, 4, RULE_ifblock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; Match(IF);
			State = 65; expression(0);
			State = 66; Match(ARROW);
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LET:
			case LETG:
			case NOT:
			case TRUE:
			case FALSE:
			case ID:
			case MINUS:
			case LPARENTHESIS:
			case NUMBER:
			case STRING:
				{
				State = 67; expression(0);
				}
				break;
			case LBRACE:
				{
				State = 68; Match(LBRACE);
				State = 69; code();
				State = 70; Match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 74; Match(ELSE);
				State = 75; Match(ARROW);
				State = 81;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LET:
				case LETG:
				case NOT:
				case TRUE:
				case FALSE:
				case ID:
				case MINUS:
				case LPARENTHESIS:
				case NUMBER:
				case STRING:
					{
					State = 76; expression(0);
					}
					break;
				case LBRACE:
					{
					State = 77; Match(LBRACE);
					State = 78; code();
					State = 79; Match(RBRACE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypedefContext : ParserRuleContext {
		public ITerminalNode LET() { return GetToken(ratParser.LET, 0); }
		public ITerminalNode TYPEKW() { return GetToken(ratParser.TYPEKW, 0); }
		public ITerminalNode ID() { return GetToken(ratParser.ID, 0); }
		public ITerminalNode LBRACE() { return GetToken(ratParser.LBRACE, 0); }
		public TupledefContext tupledef() {
			return GetRuleContext<TupledefContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(ratParser.RBRACE, 0); }
		public TypedefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typedef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterTypedef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitTypedef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypedef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypedefContext typedef() {
		TypedefContext _localctx = new TypedefContext(Context, State);
		EnterRule(_localctx, 6, RULE_typedef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(LET);
			State = 86; Match(TYPEKW);
			State = 87; Match(ID);
			State = 88; Match(LBRACE);
			State = 89; tupledef();
			State = 90; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncdefContext : ParserRuleContext {
		public ITerminalNode LET() { return GetToken(ratParser.LET, 0); }
		public FunctypeContext functype() {
			return GetRuleContext<FunctypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(ratParser.ID, 0); }
		public ITerminalNode LBRACE() { return GetToken(ratParser.LBRACE, 0); }
		public CodeContext code() {
			return GetRuleContext<CodeContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(ratParser.RBRACE, 0); }
		public FuncargContext[] funcarg() {
			return GetRuleContexts<FuncargContext>();
		}
		public FuncargContext funcarg(int i) {
			return GetRuleContext<FuncargContext>(i);
		}
		public ITerminalNode ARROW() { return GetToken(ratParser.ARROW, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterFuncdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitFuncdef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncdefContext funcdef() {
		FuncdefContext _localctx = new FuncdefContext(Context, State);
		EnterRule(_localctx, 8, RULE_funcdef);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(LET);
			State = 93; functype();
			State = 94; Match(ID);
			State = 98;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 95; funcarg();
					}
					} 
				}
				State = 100;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ARROW) {
				{
				State = 101; Match(ARROW);
				State = 102; type();
				}
			}

			State = 105; Match(LBRACE);
			State = 106; code();
			State = 107; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionsContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] EXPRSEPARATOR() { return GetTokens(ratParser.EXPRSEPARATOR); }
		public ITerminalNode EXPRSEPARATOR(int i) {
			return GetToken(ratParser.EXPRSEPARATOR, i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.EnterExpressions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IratListener typedListener = listener as IratListener;
			if (typedListener != null) typedListener.ExitExpressions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IratVisitor<TResult> typedVisitor = visitor as IratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionsContext expressions() {
		ExpressionsContext _localctx = new ExpressionsContext(Context, State);
		EnterRule(_localctx, 10, RULE_expressions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; expression(0);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==EXPRSEPARATOR) {
				{
				{
				State = 110; Match(EXPRSEPARATOR);
				State = 111; expression(0);
				}
				}
				State = 116;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
